# m3

./: .gitignore  CMakeLists.txt  README.md  output.txt
bridge/: bridge_boom.cpp  bridge_inorder.cpp
documentation/: boom_integration.md  case_for_m3.md  codebase.md
gold/: Gold_core.cpp  Gold_data.cpp
source/: Gold_data.hpp  Gold_mem.hpp  Gold_notify.cpp  Gold_notify.hpp  data.cpp  data.hpp  memory.hpp  notifier.cpp  (+5 more)
tests/: CMakeLists.txt  bridge_boom_test.cpp  core_test.cpp  data_test.cpp
tests/common/: m3_test_utils.cc  m3_test_utils.h  svdpi.h  test_framework.cc  test_framework.h
tests/legacy_memmodel/: README.md  base_test_1.cc  base_test_10.cc  base_test_11.cc  base_test_12.cc  base_test_13.cc  base_test_2.cc  base_test_3.cc  base_test_4.cc  base_test_5.cc  base_test_6.cc  base_test_7.cc  base_test_8.cc  base_test_9.cc
tests/m3/: README.md  config.py  dev_notes.md  notes.txt
tests/m3/binaries/: race.riscv  race.riscv.S
tests/m3/binaries/riscv-tests/: Makefile  config.status
tests/m3/binaries/riscv-tests/autom4te.cache/: requests
tests/m3/binaries/riscv-tests/benchmarks/: dhrystone.riscv  dhrystone.riscv.dump  median.riscv  median.riscv.dump  mm.riscv  mm.riscv.dump  mt-matmul.riscv  mt-matmul.riscv.dump  mt-vvadd.riscv  mt-vvadd.riscv.dump  multiply.riscv  multiply.riscv.dump  pmp.riscv  pmp.riscv.dump  qsort.riscv  qsort.riscv.dump  rsort.riscv  rsort.riscv.dump  sharedmem_test_1.riscv  sharedmem_test_1.riscv.dump  sharedmem_test_2.riscv  sharedmem_test_2.riscv.dump  spmv.riscv  spmv.riscv.dump  towers.riscv  towers.riscv.dump  vvadd.riscv  vvadd.riscv.dump
tests/m3/binaries/riscv-tests/isa/: rv32mi-p-breakpoint  rv32mi-p-breakpoint.dump  rv32mi-p-csr  rv32mi-p-csr.dump  rv32mi-p-illegal  rv32mi-p-illegal.dump  rv32mi-p-lh-misaligned  rv32mi-p-lh-misaligned.dump  rv32mi-p-lw-misaligned  rv32mi-p-lw-misaligned.dump  rv32mi-p-ma_addr  rv32mi-p-ma_addr.dump  rv32mi-p-ma_fetch  rv32mi-p-ma_fetch.dump  rv32mi-p-mcsr  rv32mi-p-mcsr.dump  rv32mi-p-sbreak  rv32mi-p-sbreak.dump  rv32mi-p-scall  rv32mi-p-scall.dump  rv32mi-p-sh-misaligned  rv32mi-p-sh-misaligned.dump  rv32mi-p-shamt  rv32mi-p-shamt.dump  rv32mi-p-sw-misaligned  rv32mi-p-sw-misaligned.dump  rv32si-p-csr  rv32si-p-csr.dump  rv32si-p-dirty  rv32si-p-dirty.dump  rv32si-p-ma_fetch  rv32si-p-ma_fetch.dump  rv32si-p-sbreak  rv32si-p-sbreak.dump  rv32si-p-scall  rv32si-p-scall.dump  rv32si-p-wfi  rv32si-p-wfi.dump  rv32ua-p-amoadd_w  rv32ua-p-amoadd_w.dump  (+691 more)
tests/m3/code/: compile.sh  data.h  data_gen.py  race.riscv  riscv.ld  test.ld
tests/m3/core_rtl/Sm2_a/rtl/: m3_dpi.cpp
tests/m3/interface_plumber/: copy.py  generate.py  generated_cc_dpis.cc  generated_dromajo_cosim.h  generated_verilog_hooks.v  interfaces.json
tests/m3/interface_plumber/templates/: bridge_boom_template.cpp  dromajo_cosim_template.cpp  dromajo_cosim_template.h  sim_dromajo_cosim_template.cc
tests/m3/models/: CMakeLists.txt
tests/m3/models/branch_predictor/: CMakeLists.txt  branch_predictor.cpp  branch_predictor.h
tests/m3/models/dram/dpi/: dram_dpi.cpp  dram_wrapper.v
tests/m3/models/dram/lib/: AddressMapping.dep  AddressMapping.deppo  Bank.dep  Bank.deppo  BankState.dep  BankState.deppo  BusPacket.dep  BusPacket.deppo  ClockDomain.dep  ClockDomain.deppo  CommandQueue.dep  CommandQueue.deppo  IniReader.dep  IniReader.deppo  Makefile  MemoryController.dep  MemoryController.deppo  MemorySystem.dep  MemorySystem.deppo  MultiChannelMemorySystem.dep  MultiChannelMemorySystem.deppo  PrintMacros.dep  PrintMacros.deppo  Rank.dep  Rank.deppo  SimulatorObject.dep  SimulatorObject.deppo  Transaction.dep  Transaction.deppo
tests/m3/models/dram/src/: mm.cpp  mm.h
tests/m3/models/dromajo/: CMakeLists.txt
tests/m3/models/dromajo/gold/: Gold_data.hpp
tests/m3/models/dromajo/include/: dromajo_cosim.h  dromajo_t.h  riscv_cpu.h
tests/m3/models/dromajo/src/: dromajo_cosim.cpp  dromajo_t.cpp  riscv_cpu.cpp
tests/m3/models/dummy/: serial_wrapper.v
tests/m3/models/m3/: .gitignore  CMakeLists.txt
tests/m3/models/m3/bridge/: boom_m3_t.cpp  boom_m3_t.h  bridge_boom.cpp  core_m3_t.cpp  core_m3_t.h  memop_info.h  rtl_event.h  state.h
tests/m3/models/m3/bridge/boom_m3_commands/: add_address.cpp  add_address.h  add_store_data.cpp  add_store_data.h  commit_memop.cpp  commit_memop.h  complete_amo.cpp  complete_amo.h  complete_store.cpp  complete_store.h  create_memop.cpp  create_memop.h  m3command.h  perform_load.cpp  perform_load.h  recovery_rob.cpp  recovery_rob.h  send_dcache_amo.cpp  send_dcache_amo.h  update_cacheline_data.cpp  update_cacheline_data.h  update_cacheline_state.cpp  update_cacheline_state.h
tests/m3/models/m3/source/: Gold_core.cpp  Gold_core.hpp  Gold_data.cpp  Gold_data.hpp  Gold_mem.hpp  Gold_notify.cpp  debug_utils.cpp  debug_utils.hpp  rvamo_utils.cpp  rvamo_utils.h  rvutils.cpp  rvutils.h
tests/m3/models/uart/: sim_uart.cpp
tests/m3/models/uart/dpi/: uart_dpi.cpp  uart_wrapper.v
tests/m3/models/uart/src/: uart.cpp
tests/m3/notes/: module_hierarchy_core_to_harness.md
tests/m3/rtl_puncher/: log  punch.py
tests/m3/rtl_puncher/punch_specs/: backup  sm1.ps  sm2.ps  sm2_m3.ps  sm3.ps
tests/m3/rtl_puncher/rtl_helper_modules/: counter.v
tests/m3/scripts/: count_unique_seq.py  draw_trace.py  draw_trace_inst.py  m3vis.py  parse_cva6_bpred_trace.py  plot_unique_seq.py
tests/m3/testbench/: CMakeLists.txt  debug_simulator.cpp  debug_simulator.h  fast_simulator.cpp  fast_simulator.h  model_instances.cpp  model_instances.h  sim_cli.cpp  simulator.cpp  simulator.h
tests/m3/tests/: CMakeLists.txt  base_test_1.cc  base_test_10.cc  base_test_11.cc  base_test_12.cc  base_test_13.cc  base_test_2.cc  base_test_3.cc  base_test_4.cc  base_test_5.cc  base_test_6.cc  base_test_8.cc  base_test_9.cc  m3_test_utils.cc  m3_test_utils.h  run_tests.sh  test_main.cc
tests/test_trace_reader/: test_trace_reader.cpp  test_trace_reader.h  usage_example.cpp
tests/trace_parser/: trace_parser.cpp  trace_parser.h  usage_example.cpp
tests/traces/: dhrystone.txt  mm.txt  mt-vvadd.txt  pmp.txt  spmv.txt  towers_short.txt
(+45 files in other folders)
